hadoop - containers exit immediately

--- a/hdfs-datanode/Dockerfile
+++ b/hdfs-datanode/Dockerfile
@@ -5,4 +5,6 @@ LABEL Maintainer="christinamanara2@gmail.com"
 
 COPY scripts /usr/bin/.
 
-ENTRYPOINT ["/usr/bin/bootstrap.sh"]
+#ENTRYPOINT ["/usr/bin/bootstrap.sh"]
+
+RUN ["chmod", "+x", "/usr/bin/bootstrap.sh"]
