--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -14,14 +14,20 @@ RUN \
     apt-get install -y openssh-server sshpass && \
     rm -rf /var/lib/apt/lists/*
 
-RUN mkdir /var/run/sshd
-RUN echo 'root:screencast' | chpasswd
-RUN sed -i 's/PermitRootLogin without-password/PermitRootLogin yes/' /etc/ssh/sshd_config
-RUN sed -i 's/#   StrictHostKeyChecking ask/StrictHostKeyChecking no/' /etc/ssh/ssh_config
-#RUN ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no
+RUN adduser hdoop && \
+    su - hdoop && \
+    ssh-keygen -t rsa -P '' -f ~/.ssh/id_rsa && \
+    cat ~/.ssh/id_rsa.pub >> ~/.ssh/authorized_keys && \
+    chmod 0600 ~/.ssh/authorized_keys
 
-# SSH login fix. Otherwise user is kicked off after login
-RUN sed 's@session\s*required\s*pam_loginuid.so@session optional pam_loginuid.so@g' -i /etc/pam.d/sshd
+# RUN mkdir /var/run/sshd
+# RUN echo 'root:screencast' | chpasswd
+# RUN sed -i 's/PermitRootLogin without-password/PermitRootLogin yes/' /etc/ssh/sshd_config
+# RUN sed -i 's/#   StrictHostKeyChecking ask/StrictHostKeyChecking no/' /etc/ssh/ssh_config
+# #RUN ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no
+
+# # SSH login fix. Otherwise user is kicked off after login
+# RUN sed 's@session\s*required\s*pam_loginuid.so@session optional pam_loginuid.so@g' -i /etc/pam.d/sshd
 
 # RUN echo 'root:root' | chpasswd
 # RUN sed -i 's/#\?PermitRootLogin prohibit-password/PermitRootLogin yes/' /etc/ssh/sshd_config
@@ -80,7 +86,7 @@ RUN mkdir -p /opt/data/apps/dfs/data
 ENV PATH $PATH:${HADOOP_HOME}/sbin/
 
 #RUN ssh-keygen -q -t rsa -N '' -f /id_rsa
-RUN ssh-keygen -f /root/.ssh/id_rsa -t rsa -N ''
+#RUN ssh-keygen -f /root/.ssh/id_rsa -t rsa -N ''
 
 # Hdfs ports
 EXPOSE 50010 50020 50070 50075 50090 8020 9000 9870
@@ -95,6 +101,6 @@ EXPOSE 8030 8031 8032 8033 8040 8042 8088
 EXPOSE 22
 
 #Other ports
-EXPOSE 49707 2122
+EXPOSE 49707 2222
 
 CMD ["/usr/sbin/sshd", "-D"]
