--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,8 @@ services:
     mem_limit: 2g
     stdin_open: true
     tty: true
+    volumes:
+       - ./apps:/opt/testing
 
   # Container that runs HDFS DataNode service
   hdfs-datanode:
@@ -32,7 +34,9 @@ services:
     #Adjust according to the resources available on host machine
     cpu_shares: 3000
     mem_limit: 2g
-    
+    volumes:
+      - ./apps:/opt/testing
+
   # Container that runs Spark Master and Worker services
   spark-master:
     image: spark-master
@@ -50,6 +54,8 @@ services:
     # Adjust according to the resources available on host machine
     cpu_shares: 3000
     mem_limit: 2g
+    volumes:
+      - ./apps:/opt/testing
 
   # Container that runs Spark Worker service
   spark-slave:
@@ -66,3 +72,5 @@ services:
     # Adjust according to the resources available on host machine
     cpu_shares: 3000
     mem_limit: 2g
+    volumes:
+      - ./apps:/opt/testing
